Update Notchpeak GitKeySecret to use 'null' instead of 'none'

--- a/SLATE_US_UUTAH_NOTCHPEAK/notchpeak-slate-values.yaml
+++ b/SLATE_US_UUTAH_NOTCHPEAK/notchpeak-slate-values.yaml
@@ -53,8 +53,7 @@ HTCondorCeConfig: |+
 BoscoOverrides:
   Enabled: true
   GitEndpoint: "https://github.com/slateci/utah-bosco.git"
-  RepoNeedsPrivKey: false
-  GitKeySecret: none
+  GitKeySecret: null
 
 # Enable a logging sidecar
 HTTPLogger:
