--- a/SLATE_US_UUTAH_NOTCHPEAK/notchpeak-slate-values.yaml
+++ b/SLATE_US_UUTAH_NOTCHPEAK/notchpeak-slate-values.yaml
@@ -37,7 +37,7 @@ Networking:
 HTCondorCeConfig: |+
   JOB_ROUTER_ENTRIES @=jre
   [
-    Name = Notchpeak_default";
+    Name = "Notchpeak_default";
     set_default_queue = "notchpeak-osg";
     # 16 GB
     set_default_maxMemory = 16384;
