Workaround for SLATE API false bug (#11)
Boolean false is being treated as a string, which evaluates to True!

--- a/SLATE_US_UUTAH_LONEPEAK/lonepeak-slate-values.yaml
+++ b/SLATE_US_UUTAH_LONEPEAK/lonepeak-slate-values.yaml
@@ -136,4 +136,4 @@ HostCredentials:
 # - Configures the CE as an ITB host
 # - Generates a test CA and self-signed host cert/key pair
 Developer:
-  Enabled: false
+  Enabled: null
