--- a/SLATE_US_UUTAH_NOTCHPEAK/notchpeak-slate-values.yaml
+++ b/SLATE_US_UUTAH_NOTCHPEAK/notchpeak-slate-values.yaml
@@ -124,5 +124,5 @@ HostCredentials:
 # - Configures the CE as an ITB host
 # - Generates a test CA and self-signed host cert/key pair
 Developer:
-  Enabled: false
+  Enabled: null
 
